Appliance selection components added

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,37 @@
           <h1>Can you power on these household appliances?</h1>
           <h2>Select an appliance to get started</h2>
         </div>
+        <div class="selection">
+          <div class="top-row">
+            <div class="darkblue">
+              <p>LED Light Bulb</p>
+              <img src="images/led.png"> 
+            </div>
+            <div class="lightblue">
+              <p>Incandescent Light Bulb</p>
+              <img src="images/incandescent.png"> 
+            </div>
+            <div class="darkblue">
+              <p>Kettle</p>
+              <img src="images/kettle.png"> 
+            </div>
+          </div>
+
+          <div class="bottom-row">
+            <div class="lightblue">
+              <p>Toaster</p>
+              <img src="images/toaster.png"> 
+            </div>
+            <div class="darkblue">
+              <p>Laptop</p>
+              <img src="images/laptop.png"> 
+            </div>
+            <div class="lightblue">
+              <p>Washing Machine</p>
+              <img src="images/washingmachine.png"> 
+            </div>
+          </div>
+       </div>
       </div>
     </div>
 
