Added information page for the LED light bulb

--- a/src/index.html
+++ b/src/index.html
@@ -14,30 +14,30 @@
         </div>
         <div class="selection">
           <div class="top-row">
-            <div class="darkblue" onclick="navigate('led');">
+            <div class="darkblue appliance-button" onclick="navigate('led');">
               <p>LED Light Bulb</p>
               <img src="images/led.png"> 
             </div>
-            <div class="lightblue" onclick="navigate('incandescent');">
+            <div class="lightblue appliance-button" onclick="navigate('incandescent');">
               <p>Incandescent Light Bulb</p>
               <img src="images/incandescent.png"> 
             </div>
-            <div class="darkblue" onclick="navigate('kettle');">
+            <div class="darkblue appliance-button" onclick="navigate('kettle');">
               <p>Kettle</p>
               <img src="images/kettle.png"> 
             </div>
           </div>
 
           <div class="bottom-row">
-            <div class="lightblue" onclick="navigate('toaster');">
+            <div class="lightblue appliance-button" onclick="navigate('toaster');">
               <p>Toaster</p>
               <img src="images/toaster.png"> 
             </div>
-            <div class="darkblue" onclick="navigate('laptop');">
+            <div class="darkblue appliance-button" onclick="navigate('laptop');">
               <p>Laptop</p>
               <img src="images/laptop.png"> 
             </div>
-            <div class="lightblue" onclick="navigate('washingmachine');">
+            <div class="lightblue appliance-button" onclick="navigate('washingmachine');">
               <p>Washing Machine</p>
               <img src="images/washingmachine.png"> 
             </div>
