--- a/src/incandescent.html
+++ b/src/incandescent.html
@@ -43,8 +43,9 @@
         }
 
         function select() {
-            location.href = "incandescent_mode_selection.html";
+            location.href = "mode_selection.html?appliance=incandescent";
         }
+        
     </script>
 
   </body>
