--- a/src/kettle.html
+++ b/src/kettle.html
@@ -43,7 +43,7 @@
         }
 
         function select() {
-            location.href = "kettle_mode_selection.html";
+            location.href = "mode_selection.html?appliance=kettle";
         }
     </script>
 
