--- a/src/mode_selection.html
+++ b/src/mode_selection.html
@@ -12,18 +12,14 @@
           <h1>Cycle in solo or duo mode</h1>
           <h2>Select mode to get started</h2>
         </div>
-
         <img id="back-arrow" src="images/back.png" onclick="go_back()"> 
         <button id="home-button" onclick="go_to_home()">Selection Screen</button>
-
         <div class="mode-selection">
-
             <div class="lightblue mode" id="solo-mode" onclick="select('solo mode');">
                 <h1>Solo mode</h1>
                 <img id="solo-mode-img" src="images/girl-on-bicycle.png"> 
                 <p>Take on the challenge solo</p>
             </div>
-
             <div class="darkblue mode" onclick="select('duo mode');">
                 <h1>Duo mode</h1>
                 <div class="duo-mode-imgs">
@@ -33,27 +29,30 @@
                 <p>Challenge an opponent in an energy-generating race or work cooperatively</p>
             </div>
         </div>
-        
-       
       </div>
     </div>
 
     <script>
-        function go_back() {
-            location.href = "led.html";
-        }
+      const params = new Proxy(new URLSearchParams(window.location.search), {
+        get: (searchParams, prop) => searchParams.get(prop),
+      });
+      let appliance = params.appliance;
 
-        function go_to_home(){
-            location.href = "index.html";
-        }
+      function go_back() {
+        location.href = appliance + ".html";
+      }
 
-        function select(mode) {
-            if (mode === "solo mode") {
-                location.href = "led_solo_mode.html"
-            }
-            else {
-                location.href = "led_duo_mode.html"
-            }
+      function go_to_home(){
+        location.href = "index.html";
+      }
+
+      function select(mode) {
+          if (mode === "solo mode") {
+              location.href = "solo_mode.html?appliance=" + appliance;
+          }
+          else {
+              location.href = "duo_mode.html?appliance=" + appliance;
+          }
         }
     </script>
 
