--- a/src/washingmachine.html
+++ b/src/washingmachine.html
@@ -43,7 +43,7 @@
         }
 
         function select() {
-            location.href = "washing_machine_mode_selection.html";
+            location.href = "mode_selection.html?appliance=washingmachine";
         }
     </script>
 
