--- a/src/laptop.html
+++ b/src/laptop.html
@@ -43,7 +43,7 @@
         }
 
         function select() {
-            location.href = "laptop_mode_selection.html";
+            location.href = "mode_selection.html?appliance=laptop";
         }
     </script>
 
