--- a/src/led.html
+++ b/src/led.html
@@ -43,7 +43,7 @@
         }
 
         function select() {
-            location.href = "led_mode_selection.html";
+            location.href = "mode_selection.html?appliance=led";
         }
     </script>
 
