--- a/src/toaster.html
+++ b/src/toaster.html
@@ -43,7 +43,7 @@
         }
 
         function select() {
-            location.href = "toaster_mode_selection.html";
+            location.href = "mode_selection.html?appliance=toaster";
         }
     </script>
 
