Added challenge start screen

--- a/src/duo_mode.html
+++ b/src/duo_mode.html
@@ -50,10 +50,10 @@
 
         function select(mode) {
           if (mode === "compete") {
-            location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=compete";
+            location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Competition Mode";
           }
           else if (mode === "cooperate") {
-            location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=cooperate";
+            location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Cooperation Mode";
           }
         }
     </script>
