--- a/src/mode_selection.html
+++ b/src/mode_selection.html
@@ -48,7 +48,7 @@
 
       function select(mode) {
           if (mode === "solo mode") {
-              location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=solo";
+              location.href = "timer_duration_selection.html?appliance=" + appliance + "&mode=Solo Mode";
           }
           else {
               location.href = "duo_mode.html?appliance=" + appliance;
