Timer added to the challenge screen

--- a/src/timer_duration_selection.html
+++ b/src/timer_duration_selection.html
@@ -48,7 +48,7 @@
         }
 
         function select(duration){
-            location.href = "challenge_screen.html?appliance=" + appliance + "&mode=" + mode + "&duration=" + duration;
+            location.href = "start_screen.html?appliance=" + appliance + "&mode=" + mode + "&duration=" + duration;
         }
     </script>
 
