--- a/src/start_screen.html
+++ b/src/start_screen.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="middle">
-                <button id="start-button" onclick="start()"> START </button>
+                <button id="button" onclick="start()"> START </button>
             </div>
             
             <div class="right">
