--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Cycling Pedal Power Display</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div class="outer-container">
-      <div class="content-container">
-        <div class="text-container">
-          <h1>Can you power on these household appliances?</h1>
-          <h2>Select an appliance to get started</h2>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Cycling Pedal Power Display</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <div class="outer-container">
+            <div class="content-container">
+                <div class="text-container">
+                    <h1>Can you power on these household appliances?</h1>
+                    <h2>Select an appliance to get started</h2>
+                </div>
+                <div class="selection">
+                    <div class="top-row">
+                        <div class="darkblue appliance-button" onclick="navigate('led');">
+                            <p>LED Light Bulb</p>
+                            <img src="images/led.png" />
+                        </div>
+                        <div class="lightblue appliance-button" onclick="navigate('incandescent');">
+                            <p>Incandescent Light Bulb</p>
+                            <img src="images/incandescent.png" />
+                        </div>
+                        <div class="darkblue appliance-button" onclick="navigate('kettle');">
+                            <p>Kettle</p>
+                            <img src="images/kettle.png" />
+                        </div>
+                    </div>
+
+                    <div class="bottom-row">
+                        <div class="lightblue appliance-button" onclick="navigate('toaster');">
+                            <p>Toaster</p>
+                            <img src="images/toaster.png" />
+                        </div>
+                        <div class="darkblue appliance-button" onclick="navigate('laptop');">
+                            <p>Laptop</p>
+                            <img src="images/laptop.png" />
+                        </div>
+                        <div class="lightblue appliance-button" onclick="navigate('washingmachine');">
+                            <p>Washing Machine</p>
+                            <img src="images/washingmachine.png" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="selection">
-          <div class="top-row">
-            <div class="darkblue appliance-button" onclick="navigate('led');">
-              <p>LED Light Bulb</p>
-              <img src="images/led.png"> 
-            </div>
-            <div class="lightblue appliance-button" onclick="navigate('incandescent');">
-              <p>Incandescent Light Bulb</p>
-              <img src="images/incandescent.png"> 
-            </div>
-            <div class="darkblue appliance-button" onclick="navigate('kettle');">
-              <p>Kettle</p>
-              <img src="images/kettle.png"> 
-            </div>
-          </div>
 
-          <div class="bottom-row">
-            <div class="lightblue appliance-button" onclick="navigate('toaster');">
-              <p>Toaster</p>
-              <img src="images/toaster.png"> 
-            </div>
-            <div class="darkblue appliance-button" onclick="navigate('laptop');">
-              <p>Laptop</p>
-              <img src="images/laptop.png"> 
-            </div>
-            <div class="lightblue appliance-button" onclick="navigate('washingmachine');">
-              <p>Washing Machine</p>
-              <img src="images/washingmachine.png"> 
-            </div>
-          </div>
-       </div>
-      </div>
-    </div>
-
-    <script>
-      function navigate(appliance) {
-        if (appliance === "led") {
-          location.href = "led.html";
-        }
-
-        else if (appliance === "incandescent") {
-          location.href = "incandescent.html";
-        }
-
-        else if (appliance === "kettle") {
-          location.href = "kettle.html";
-        }
-
-        else if (appliance === "toaster") {
-          location.href = "toaster.html";
-        }
-
-        else if (appliance === "laptop") {
-          location.href = "laptop.html";
-        }
-
-        else if (appliance === "washingmachine") {
-          location.href = "washingmachine.html";
-        }
-      }
-    </script>
-  </body>
+        <script>
+            function navigate(appliance) {
+                if (appliance === "led") {
+                    location.href = "led.html";
+                } else if (appliance === "incandescent") {
+                    location.href = "incandescent.html";
+                } else if (appliance === "kettle") {
+                    location.href = "kettle.html";
+                } else if (appliance === "toaster") {
+                    location.href = "toaster.html";
+                } else if (appliance === "laptop") {
+                    location.href = "laptop.html";
+                } else if (appliance === "washingmachine") {
+                    location.href = "washingmachine.html";
+                }
+            }
+        </script>
+    </body>
 </html>
