--- a/src/kettle.html
+++ b/src/kettle.html
@@ -1,51 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Cycling Pedal Power Display</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div class="outer-container">
-      <div class="content-container">
-        <div class="text-container">
-          <h1>Can you power on these household appliances?</h1>
-          <h2>Select an appliance to get started</h2>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Cycling Pedal Power Display</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <div class="outer-container">
+            <div class="content-container">
+                <div class="text-container">
+                    <h1>Can you power on these household appliances?</h1>
+                    <h2>Select an appliance to get started</h2>
+                </div>
+
+                <img id="back-arrow" src="images/back.png" onclick="go_back()" />
+
+                <div class="darkblue appliance-info">
+                    <div class="appliance-image">
+                        <img src="images/kettle.png" />
+                    </div>
+
+                    <div class="appliance-info-text">
+                        <h2>Electric Kettle</h2>
+                        <p>Wattage: <b>W</b></p>
+                        <br />
+                        <p>Average monthly household usage: <b>kWh</b></p>
+                        <p>Average monthly cost: <b>£</b></p>
+                        <p>Average monthly CO₂ emissions: <b>kg</b></p>
+                        <br />
+                        <h3>Do you think you can power on an Electric Kettle?</h3>
+                        <br />
+                        <button id="selection-button" onclick="select()">SELECT</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <img id="back-arrow" src="images/back.png" onclick="go_back()"> 
+        <script>
+            function go_back() {
+                location.href = "index.html";
+            }
 
-        <div class="darkblue appliance-info">
-            <div class="appliance-image">
-                <img src="images/kettle.png"> 
-            </div>
-
-            <div class="appliance-info-text">
-                <h2>Electric Kettle</h2>
-                <p>Wattage: <b>W</b></p>
-                <br>
-                <p>Average monthly household usage: <b>kWh</b></p>
-                <p>Average monthly cost: <b>£</b></p>
-                <p>Average monthly CO₂ emissions: <b>kg</b></p>
-                <br>
-                <h3>Do you think you can power on an Electric Kettle?</h3>
-                <br>
-                <button id="selection-button" onclick="select()"> SELECT </button>
-            </div>
-        </div>
-       
-      </div>
-    </div>
-
-    <script>
-        function go_back() {
-            location.href = "index.html";
-        }
-
-        function select() {
-            location.href = "mode_selection.html?appliance=kettle";
-        }
-    </script>
-
-  </body>
+            function select() {
+                location.href = "mode_selection.html?appliance=kettle";
+            }
+        </script>
+    </body>
 </html>
